exploring fix for the video on mobile not playing

--- a/src/styles/background.css
+++ b/src/styles/background.css
@@ -17,6 +17,9 @@
   top: 0;
   left: 0;
   width: 100%;
+  height: 100vh;
+  object-fit: cover;
+
 }
 
 
